--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "author": "Md Hoque",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-async-handler": "^1.2.0",
+    "express-validator": "^6.14.0",
+    "gravatar": "^1.8.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.1"
   },
   "devDependencies": {
