--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "gravatar": "^1.8.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^6.2.1"
+    "mongoose": "^6.2.1",
+    "validator-js": "^0.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
