--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NODE_ENV = development
 PORT = 5000
-MONGO_URI = mongodb+srv://booking_system_mern:booking_system_mern@mdcluster.hgvzg.mongodb.net/bookingmern?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://booking_system:booking_system@cluster0.d79yw.mongodb.net/booking_db?retryWrites=true&w=majority
 JWT_SECRET = OY98kGdPQJOFm8KydL4iY6IzVKvfWNNp
