--- a/package.json
+++ b/package.json
@@ -14,18 +14,19 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
+    "config": "^3.3.7",
     "dotenv": "^16.0.0",
-    "express": "^4.17.2",
+    "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "express-validator": "^6.14.0",
     "gravatar": "^1.8.2",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.29.1",
-    "mongoose": "^6.2.1",
+    "moment": "^2.29.3",
+    "mongoose": "^6.3.1",
     "validator-js": "^0.2.1"
   },
   "devDependencies": {
     "concurrently": "^7.1.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.16"
   }
 }
