--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
     "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-avatar": "^4.0.0",
     "react-bootstrap": "^2.2.3",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.8",
