--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react": "^18.0.0",
     "react-avatar": "^4.0.0",
     "react-bootstrap": "^2.2.3",
+    "react-bootstrap-typeahead": "^6.0.0-rc.2",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
