--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-paginate": "^8.1.3",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
