--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-avatar": "^4.0.0",
