--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "Md Ahsanul Hoque",
   "license": "MIT",
   "dependencies": {
+    "@faker-js/faker": "^7.3.0",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "config": "^3.3.7",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
