--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
   "version": 1,
   "builds": [
     {
-      "src": "./backend/server.js",
+      "src": "/backend/server.js",
       "use": "@now/node"
     }
   ],
   "routes": [
     {
-      "src": "./backend/(.*)",
-      "dest": "server.js"
+      "src": "/",
+      "dest": "/backend/server.js"
     }
   ]
 }
