edit vercel config2

--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,12 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/backend/(.*)",
       "dest": "/backend/server.js"
+    },
+    {
+      "src": "/backend/(.*)",
+      "dest": "/server.js"
     }
   ]
 }
