--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-avatar": "^4.0.0",
