--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "moment": "^2.29.3",
     "mongoose": "^6.3.1",
     "morgan": "^1.10.0",
+    "swagger-jsdoc": "^6.2.7",
+    "swagger-ui-express": "^4.6.0",
     "validator-js": "^0.2.1"
   },
   "devDependencies": {
