--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI = mongodb+srv://booking_system:booking_system@cluster0.d79yw.mongodb.net/booking_db?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://booking_system:dev_dbs@cluster0.d79yw.mongodb.net/booking_db?retryWrites=true&w=majority
 JWT_SECRET = OY98kGdPQJOFm8KydL4iY6IzVKvfWNNp
